# naiad

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cases/analytic/: .gitignore  collect.py  manifest.txt  mgxs_onegroup.xs  mgxs_onegroup_anisotropic.xs  mgxs_sixgroup.xs  mgxs_threegroup.xs  mgxs_twogroup.xs  mgxs_twogroup_anisotropic.xs  runem.sh
cases/c5g7/: c5g7.xs
cases/critical_slab/: doit.py  onegroup.xs  slab.inp
cases/critical_slab_mg/: criticality_search.py  mgxs.xs  mgxs_mod.xs  slab.inp
cases/diffusion_onegroup/: .gitignore  doit.py  onegroup.inp  slab.inp  view.py
cases/diffusion_twogroup/: .gitignore  doit.py  twogroup.inp  twogroup.xs
cases/diffusion_tworeg/: .gitignore  analysis.py  doit.py  tworeg.inp  tworeg.xs  view.py
cases/speng/: speng.inp
src/: .gitignore  Makefile  analysis.cpp  analysis.hpp  dense_matrix.cpp  dense_matrix.hpp  diffusion.cpp  diffusion.hpp  exception_handler.cpp  exception_handler.hpp  geometry.cpp  geometry.hpp  input.cpp  input.hpp  linalg.cpp  linalg.hpp  main.cpp  math.cpp  math.hpp  output.cpp  output.hpp  quadrature1d.cpp  quadrature1d.hpp  quadrature_gauss_legendre.cpp  quadrature_gauss_legendre.hpp  quadrature_uniform.cpp  quadrature_uniform.hpp  result.cpp  result.hpp  timer.cpp  timer.hpp  transport.cpp  transport.hpp  writer.cpp  writer.hpp  xslibrary.cpp  xslibrary.hpp
tools/: .gitignore  flux_plot.py  gauss_legendre.txt  gauss_legendre_quadrature.py  lgvalues.py  lgvalues_abscissa.py  lgvalues_weights.py  phi_plot.py  pin_power.py  power_plot.py  transport_ratio.py  xslib.py
(+92 files in other folders)
